--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>
+⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱
+Llevo el mismo nombre que mi abuela materna, y por mucho tiempo nunca supe mucho de ella. No habían cosas suyas por ningún lado, la única foto que había visto era, en realidad, una pintura. A pesar de que me contaran historias sobre ella, me hacía falta algo suyo, algún vestido que ella hubiera usado o algún objeto que hubiera tocado. Por ahí escuché en alguna conversación que escribía poemas, y al preguntar más sobre ellos, mi tío me mando una carpeta con unos audios. Ahí escuché su voz por primera vez.
+
+La segunda materialización que tuve de ella fue una carta, en donde, en pocas palabras, se disculpó por su salud mental, por estar deprimida.
+
+-
+
+En las noches espiritistas en la inglaterra del siglo XIX se llevaban a cabo séances, sesiones nocturnas en donde las médiums conectaban a familares o seres queridos con les difuntes, y se las ingeniaban para producir objetos que traían desde la muerte. A estas materializaciones del espíritu les llamaban ectoplasma, retratos enmarañados en telas, deformados por el viaje desde el más allá al mundo de los vivos.
+
+-
+
+Tomando la idea del ectoplasma, con esta pieza establezco un puente de comunicación con mi abuela a través de vías electrónicas. De la misma forma en la que llegó por primera vez a mí su voz, dialogo con ella: primero escucho sus poemas, los transcribo y después los corrompo con código. hacemos una colaboración que se deforma en el tiempo-espacio que me permite este medio.
+
+Los textos son ilegibles en parte porque no me pertenece a mí la decisión sobre quién los puede leer o no, y en parte porque quiero que formen parte de un lenguaje de la noche, de lo oculto, de lo codificado, textos que se leen con la memoria del cuerpo, allá donde las palabras de nuestras madres y nuestras abuelas se arrinconan y nos hablan en secreto.
+
+-
+Muchas gracias a Mariel Vela y a Sandra Sánchez de Underbelly curaduría y al Instituto Cabañas por albergar mi pieza.
+⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
    <script src="p5.min.js"></script>
    <script src="sketch.js"></script>
    <script type="text/javascript" src="https://p5livemedia.itp.io/simplepeer.min.js"></script>
