--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Los textos son ilegibles en parte porque no me pertenece a mí la decisión sobr
 -
 Muchas gracias a Mariel Vela y a Sandra Sánchez de Underbelly curaduría y al Instituto Cabañas por albergar mi pieza.
 ⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
    <script src="p5.min.js"></script>
    <script src="sketch.js"></script>
    <script type="text/javascript" src="https://p5livemedia.itp.io/simplepeer.min.js"></script>
