--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Muchas gracias a Mariel Vela y a Sandra Sánchez de Underbelly curaduría y al I
 ⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱⋰⋱</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
    <script src="p5.min.js"></script>
-   <script src="sketch.js"></script>
+   <script src="second-sketch.js"></script>
    <script type="text/javascript" src="https://p5livemedia.itp.io/simplepeer.min.js"></script>
    <script type="text/javascript" src="https://p5livemedia.itp.io/socket.io.js"></script>
    <script type="text/javascript" src="https://p5livemedia.itp.io/p5livemedia.js"></script>
